syntax = "proto3";

package auth;

option go_package = "github.com/happilymarrieddad/old-world/api3/pb/proto/auth";

service Auth {
    rpc Login(LoginRequest) returns (LoginReply) {}
    rpc Validate(JWTRequest) returns (ValidateReply) {}
    rpc Refresh(JWTRequest) returns (LoginReply) {}
    rpc CreateUser(CreateUserRequest) returns (LoginReply) {}
}

message User {
    string id = 1;
    string firstName = 2;
    string lastName = 3;
    string email = 4;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginReply {
    string bearer = 1;
    User user = 2;
}

message JWTRequest {
    string JWT = 1;
}

message ValidateReply {
    User user = 1;
}

message CreateUserRequest {
    string firstName = 1;
    string lastName = 2;
    string email = 3;
    string password = 4;
    string passwordConfirm = 5;
    string addr = 6;
    string city = 7;
    string state = 8;
    string country = 9;
    string zip = 10;
}
